# cdef-data-generator

./: .gitignore  Cargo.toml  schema.json  test.parquet
src/: cli.rs  config.rs  error.rs  generate.rs  main.rs  read.rs  write.rs
src/generate/: mappings.rs  mod.rs  pnr.rs  recnum.rs  utils.rs
src/registers/: bef.rs  lpr2.rs  lpr3.rs  mod.rs  other.rs
