[package]
name = "cdef-data-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["env", "help", "std", "derive"] }
fake = { version = "2.10.0", features = [
    "derive",
    "dummy",
    "uuid",
    "time",
    "serde_json",
] }
lazy_static = "1.5.0"
once_cell = "1.20.2"
polars = { version = "0.43.1", features = ["lazy", "parquet"] }
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
